[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Player/circle.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CircleShape2D" id=2]
radius = 452.475

[sub_resource type="CircleShape2D" id=3]
radius = 260.644

[sub_resource type="CircleShape2D" id=4]
radius = 33.1441

[node name="Sprite" type="Sprite"]
material = SubResource( 1 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="OkArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OkArea"]
visible = false
shape = SubResource( 2 )

[node name="GoodArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea"]
visible = false
shape = SubResource( 3 )

[node name="PerfectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea"]
shape = SubResource( 4 )
[connection signal="area_entered" from="OkArea" to="." method="_on_OkArea_area_entered"]
[connection signal="area_entered" from="GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_entered" from="PerfectArea" to="." method="_on_PerfectArea_area_entered"]
